# polyfact

./: CMakeLists.txt  README.md
include/: difference_of_squares.h  greatest_common_factor.h  grouping_method.h  polyfact.h
src/: difference_of_squares.cpp  greatest_common_factor.cpp
